--- a/style/main.css
+++ b/style/main.css
@@ -225,10 +225,7 @@ section {
           flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  text-align: center;
 }
 
 .personal-details__identity {
@@ -261,6 +258,9 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (max-width: 425px) {
@@ -270,7 +270,6 @@ section {
 }
 
 .personal-details__svg-illustration {
-  width: 95vw;
   position: relative;
   overflow: hidden;
   -webkit-box-flex: 10;
